[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subsurfaceio-docs"
version = "0.1.0"
description = "MkDocs + Griffe extensions for SubSurface.io"
requires-python = ">=3.13"

dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-literate-nav",
  "mkdocstrings[python]",
  "griffe-pydantic",
  "subsurfaceio @ git+https://github.com/subsurfaceiodev/subsurfaceio.git",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]